--- a/TransUnion/index.html
+++ b/TransUnion/index.html
@@ -165,6 +165,7 @@
             function start() {
                 var rp1 = radialProgress(document.getElementById("radial-chart-element"))
                 //.label("As of 04/18/2015. Based on VantageScore")
+                .fontSize(60)
                 .diameter(235)
                 .minValue(300)
                 .maxValue(850)
